ecmascript/parser/tests/test262-error-references/fail/9c9196e04a0615c0.js.stderr
error: Expected ,, got {
 --> $DIR/tests/test262-parser/fail/9c9196e04a0615c0.js:1:14
  |
1 | ({ get: g(d) { } })
  |              ^

